# AIRTS

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/environments/: environment.toml
.github/workflows/: build-windows.yml
docs/: design.md  performance.md  roadmap.md
docs/architecture/: automation-model.md  core.md  engineering.md  information-integrations.md  movement.md  spatial-world.md
docs/decisions/: 0001-modular-monolith.md  0002-gpu-presentation-interpolation.md  0003-saturation-aware-crowd-flow.md  0004-real-fps-acceptance.md  0005-canonical-module-ownership.md  0006-stable-incremental-crowd-state.md  0008-single-movement-pipeline.md  README.md
docs/milestones/: performance.md  runtime.md
src/airts/: __init__.py  __main__.py  app.py  automations.py  commands.py  control.py  entities.py  events.py  geometry.py  map_model.py  movement.py  occupancy.py  opengl_renderer.py  pathfinding.py  persistence.py  projectiles.py  replay.py  simulation.py  spatial.py  spatial_index.py  validation.py  visibility.py
tests/: conftest.py  test_4k_thousand_scout_100fps.py  test_automations.py  test_builder_factory_ui_milestone.py  test_command_schemas.py  test_events.py  test_geometry.py  test_large_army_performance.py  test_lifecycle.py  test_map_model.py  test_occupancy.py  test_opengl_thousand_scout_100fps.py  test_pathfinding.py  test_persistence.py  test_phase3_runtime.py  test_phase4_interaction.py  test_phase5_economy_combat.py  test_physical_collisions.py  test_replay.py  test_rts_reliability.py  test_simulation.py  test_spatial_index.py  test_swarm_movement.py  test_thousand_unit_100fps.py  test_visibility.py
tests/architecture/: __init__.py  test_architecture_boundaries.py  test_documentation_structure.py
tests/gui_scenarios/: crowd_congestion_gui.py  large_army_gui.py  large_force_behavior_regressions_gui.py  rendering_performance_gui.py
tests/integration/: __init__.py  test_lifecycle.py  (+9 more)
(+50 files in other folders)
