[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"


[project]
name = "airts"
version = "0.1.0"
description = "A human-in-the-loop RTS research environment for language-driven automation."
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5,<3",
]


[project.optional-dependencies]
dev = [
    "mypy>=1.14",
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.9",
]


[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]


[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]


[tool.ruff.lint]
select = [
    "B",
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "UP",
]


[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
mypy_path = "src"
