[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"


[project]
name = "airts"
version = "0.1.0"
description = "A human-in-the-loop RTS research environment for language-driven automation."
requires-python = ">=3.13,<3.14"
dependencies = [
    "pygame-ce>=2.5.7,<3",
]


[project.optional-dependencies]
dev = [
    "mypy>=2.2,<3",
    "pytest>=9.1,<10",
    "ruff>=0.15.21,<0.16",
]

package = [
    "pyinstaller==6.21.0",
]

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
airts = ["data/*.json"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]


[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]


[tool.ruff.lint]
select = [
    "B",
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "UP",
]


[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
mypy_path = "src"
